<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_function">

        <SwitchPreference
            android:key="open_wallpaper_notify"
            android:title="@string/open_wallpaper_notify"
            android:defaultValue="true"
            android:summary="@string/open_wallpaper_notify_description" />

        <SwitchPreference
            android:key="notify_if_favorite_default"
            android:title="@string/notify_if_favorite_default"
            android:defaultValue="true"
            android:summary="无需手动添加"/>

        <ListPreference
            android:key="poll_frequency"
            android:title="@string/poll_frequency"
            android:summary="@string/poll_frequency_description"
            android:entries="@array/poll_frequency_entries"
            android:defaultValue="15"
            android:entryValues="@array/poll_frequency_entries_values"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_application">

        <Preference
            android:key="preference_update"
            android:title="@string/check_update" />

        <Preference
            android:key="preference_about"
            android:title="@string/about"/>

    </PreferenceCategory>

</PreferenceScreen>