<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <!-- express_company -->
    <TextView
        style="@style/BaseLabel"
        android:text="@string/express_company" />

    <TextView
        style="@style/TextItemContent"
        android:id="@+id/express_company"
        android:text="顺丰" />

    <!-- delivery_id -->
    <TextView
        style="@style/BaseLabel"
        android:text="@string/delivery_id" />

    <TextView
        style="@style/TextItemContent"
        android:id="@+id/delivery_id"
        android:text="1231231231313" />

    <!-- tag -->
    <TextView
        style="@style/BaseLabel"
        android:text="@string/tag"
        android:visibility="gone" />

    <TextView
        style="@style/TextItemContent"
        android:id="@+id/tag"
        android:text="sadfas"
        android:visibility="gone" />

    <!-- delivery_state -->
    <TextView
        style="@style/BaseLabel"
        android:text="@string/delivery_state"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/delivery_state"/>

    <!-- operations -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            style="@style/BaseTextButton"
            android:text="@string/cancel"
            android:layout_alignParentRight="true"
            android:id="@+id/cancel" />

        <TextView
            style="@style/BaseTextButton"
            android:text="@string/mark"
            android:id="@+id/mark"/>

        <TextView
            style="@style/BaseTextButton"
            android:text="@string/pin"
            android:layout_toRightOf="@id/mark"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/pin" />

    </RelativeLayout>

</LinearLayout>
</ScrollView>