<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/bg_primary">

    <!-- Header -->
    <TextView
        style="@style/BaseTextHeader"
        android:text="@string/search_express_title"/>

    <!-- from -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="@style/BaseLabel"
            android:text="@string/from"
            android:labelFor="@id/express_from"/>

        <EditText
            style="@style/BaseEditText"
            android:layout_width="match_parent"
            android:id="@+id/express_from"
            android:hint="@string/from_example" />

    </LinearLayout>

    <!-- to -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="@style/BaseLabel"
            android:text="@string/to"
            android:labelFor="@id/express_to"/>

        <EditText
            style="@style/BaseEditText"
            android:layout_width="match_parent"
            android:id="@+id/express_to"
            android:hint="@string/to_example" />

    </LinearLayout>

    <!-- express_company -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_primary"
        android:showDividers="end">

        <TextView
            style="@style/BaseLabel"
            android:text="@string/express_company" />

        <Spinner
            style="@style/BaseSpinner"
            android:layout_width="match_parent"
            android:id="@+id/express_company" />

    </LinearLayout>

    <!-- queryButton -->
    <TextView
        style="@style/BaseTextButton"
        android:layout_marginTop="40dp"
        android:id="@+id/query"
        android:text="@string/query" />

</LinearLayout>