<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <!-- username -->
    <TextView
        style="@style/BaseLabel"
        android:layout_marginTop="40dp"
        android:text="@string/username" />

    <EditText
        style="@style/BaseTextButton"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="text"
        android:id="@+id/user_account"/>

    <!-- password -->
    <TextView
        style="@style/BaseLabel"
        android:text="@string/password" />

    <EditText
        style="@style/BaseEditText"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        android:id="@+id/user_password"/>

    <!-- confirm password -->
    <TextView
        style="@style/BaseLabel"
        android:text="@string/confirm_password"/>

    <EditText
        style="@style/BaseEditText"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        android:id="@+id/user_password_confirm"/>

    <!-- email -->
    <TextView
        style="@style/BaseLabel"
        android:text="@string/email" />

    <EditText
        style="@style/BaseEditText"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textEmailAddress"
        android:id="@+id/user_email"/>

    <!-- register -->
    <TextView
        style="@style/BaseTextButton"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:id="@+id/register"/>

</LinearLayout>