<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--http://stackoverflow.com/questions/26852108/how-do-you-set-the-title-color-for-the-new-toolbar-->
    <!-- 顶部Toolbar -->
    <android.support.v7.widget.Toolbar
        style="@style/BaseToolbar"
        app:theme="@style/AppTheme.Toolbar"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title"
        app:subtitleTextAppearance="@style/AppTheme.Toolbar.Title"
        android:id="@+id/toolbar"
        android:title="@string/app_name" />


    <!-- ViewPager -->
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/pager"/>


    <!-- 底部Host容器 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_light_top_border"
        android:orientation="horizontal">

        <!-- 快递查询 -->
        <LinearLayout
            style="@style/Tab"
            android:id="@+id/tab_receive">

            <ImageView
                style="@style/TabIcon"
                android:id="@+id/tab_receive_icon"
                android:src="@drawable/ic_action_mail_active" />

            <TextView
                style="@style/TabTitle"
                android:textColor="@color/color_primary"
                android:id="@+id/tab_receive_title"
                android:text="@string/receive_delivery" />

        </LinearLayout>

        <!-- 寄件查询 -->
        <LinearLayout
            style="@style/Tab"
            android:id="@+id/tab_send">

            <ImageView
                style="@style/TabIcon"
                android:id="@+id/tab_send_icon"
                android:src="@drawable/ic_action_search" />

            <TextView
                style="@style/TabTitle"
                android:id="@+id/tab_send_title"
                android:text="@string/send_delivery" />

        </LinearLayout>

        <!-- 我 -->
        <LinearLayout
            style="@style/Tab"
            android:id="@+id/tab_me">

            <ImageView
                style="@style/TabIcon"
                android:id="@+id/tab_me_icon"
                android:src="@drawable/ic_action_user" />

            <TextView
                style="@style/TabTitle"
                android:id="@+id/tab_me_title"
                android:text="@string/me" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>